[package]
name = "rqpush"
version = "0.4.2"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"
description = "A library to assist with pushing notifications to RQueue."
homepage = "https://github.com/jeremyandrews/rqpush"
documentation = "https://docs.rs/rqpush/"
repository = "https://github.com/jeremyandrews/rqpush"
readme = "README.md"
keywords = ["network", "notification"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9"
handlebars = "^2.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.8"
